--- a/semana4/lab13/views/nuevo.ejs
+++ b/semana4/lab13/views/nuevo.ejs
@@ -3,7 +3,7 @@
 <h1 class="title">Registrar nuevo piloto</h1>
 
 <form action="/pilotos/nuevo" method="POST">
-
+    <input type="hidden" name="_csrf" value="<%=csrfToken%>">
     <label for="nombre">Nombre:</label>
     <input required name="nombre" id="nombre" class="input is-rounded" type="text" placeholder="Stig">
     <br><br>
@@ -11,6 +11,7 @@
     <input name="numero" id="numero" class="input is-rounded" type="text" placeholder="Stig">
     <br><br>
     <label for="escuderia">Escuderia:</label>
+    <div class = "select is-primary"></div>
     <input name="escuderia" id="escuderia" class="input is-rounded" type="text" placeholder="Stig">
     <br><br>
     <input class="button is-rounded is-success" type="submit" value="Registrar">
