--- a/semana4/lab13/views/signup.ejs
+++ b/semana4/lab13/views/signup.ejs
@@ -3,6 +3,7 @@
 <h1 class="title">Registrate</h1>
 
 <form action="/usuarios/signup" method="POST">
+    <input type="hidden" name="_csrf" value="<%=csrfToken%>">
 
     <label for="nombre">Nombre:</label>
     <input required name="nombre" id="nombre" class="input is-rounded" type="text" placeholder="Daniel">
